--- a/index.html
+++ b/index.html
@@ -11,38 +11,78 @@
             justify-content: space-between;
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            background-color: #121212;
+            color: #e0e0e0;
         }
         .main-content, .message-feed {
             padding: 20px;
             box-sizing: border-box;
+            background-color: rgba(40, 40, 40, 0.9);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            border-radius: 8px;
+            margin: 20px;
         }
         .main-content {
             flex: 3;
         }
         .message-feed {
             flex: 1;
-            border-left: 1px solid #ccc;
-            height: 100vh;
+            border-left: none;
+            height: calc(100vh - 40px);
             overflow-y: auto;
         }
         iframe {
             width: 100%;
-            height: 480px;
+            height: calc(100vh - 180px); /* Adjust the height to fit better */
+            border: none;
+            border-radius: 8px;
         }
         #messages {
             margin-top: 20px;
         }
         #messages div {
             padding: 10px;
-            border-bottom: 1px solid #eee;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            background-color: rgba(60, 60, 60, 0.8);
+            border-radius: 4px;
+            margin-bottom: 10px;
+            color: #e0e0e0;
+            font-family: 'Courier New', Courier, monospace;
+        }
+        h1, h2 {
+            font-family: 'Arial', sans-serif;
+            font-weight: 700;
+            color: #ffffff;
+            text-align: center;
+        }
+        .logo-container {
+            display: flex;
+            align-items: center;
+            position: absolute;
+            top: 20px;
+            left: 20px;
+        }
+        .logo-container img {
+            width: 80px; /* Increased the size of the logo */
+            height: 80px; /* Increased the size of the logo */
+            opacity: 0.8; /* Make the image transparent */
+            margin-right: 10px;
+        }
+        .logo-container span {
+            font-size: 24px;
+            font-weight: bold;
+            color: #e0e0e0;
         }
     </style>
 </head>
 <body>
+    <div class="logo-container">
+        <img src="image.png" alt="Logo">
+        <span>Safety Inspector</span>
+    </div>
     <div class="main-content">
         <h1>Live View</h1>
-        <p>This is a live view of the construction site through a worker's hard hat. Important safety hazards are detected using AI and highlighted.</p>
         <iframe
             src="https://viewer.millicast.com?streamId=X6cJur/AIAssistantWebStream"
             allowfullscreen>
@@ -50,7 +90,6 @@
     </div>
     <div class="message-feed">
         <h2>Live Messages</h2>
-        <p>This is a live log of the construction site hazards detected. Important safety hazards are explained using AI.</p>
         <div id="messages">
         </div>
     </div>
