updating the html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <div class="logo-container">
-        <img src="image.png" alt="Logo">
+        <img src="/mnt/data/image.png" alt="Logo">
         <span>Safety Inspector</span>
     </div>
     <div class="main-content">
