--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         #messages {
             margin-top: 20px;
         }
-        #messages div {
+        .message {
             padding: 10px;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             background-color: rgba(60, 60, 60, 0.8);
             border-radius: 4px;
             margin-bottom: 10px;
             color: #e0e0e0;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Arial', sans-serif;
         }
         h1 {
             font-family: 'Arial', sans-serif;
